# MLLM-FinalProject

./: .gitignore  README.md  data.md  pyproject.toml  requirements.txt  tmp_docx_text.txt  多模态大模型开题报告.docx  开题报告.md  项目框架与分工计划.md  项目部署流程.md
.tmp/: exp3_api.err
app/: app.py
configs/: base.yaml  dataset_downloads.yaml  datasets.docvqa_unique_docpage_100.yaml  datasets.yaml  eval.yaml  model.yaml  paths.yaml  retrieval.yaml
docs/: B_检索与推理TODO检查清单.md  api_spec.md  data_indexing.md  dataset_prep.md  deployment_init.md  evaluation_protocol.md  model_integration_openai_compatible.md  retrieval_optimization_plan.md  unique_docpage_100_protocol.md  前端测试问题清单.md  项目实验论文报告.md  项目框架与分工计划.md  项目部署流程.md
image/: description.md
scripts/: 00_download_mineru_models.py  00_prepare_env.ps1  01_download_datasets.py  01_prepare_datasets.py  02_check_dataset_health.py  03_clean_dataset_dirs.py  04_check_model_connectivity.py  05_launch_api.py  06_launch_ui.py  06_run_mineru.py  07_build_mock_retrieval_data.py  07_parse_and_chunk.py  08_build_indexes.py  08_smoke_test_text_retrieval.py  09_query_indexes.py  10_run_data_index_pipeline.py  11_smoke_mllm_eval.py  12_run_benchmark_eval.py  13_build_visual_descriptor_index.py  14_analyze_benchmark_errors.py  15_build_unique_docpage_benchmark.py  16_generate_benchmark_assets.py  17_prepare_ablation_indexes.py  18_run_ablation_suite.py  19_generate_ablation_tables.py  20_generate_ablation_overview.py  21_build_strict_visual_subset.py  22_generate_strict_visual_tables.py  23_generate_gate_target_table.py  data_index_utils.py
src/: __main__.py  cli.py
test_raw_file/: C10 - ObliviousTransfer 不经意传播.md  C11 - HomomorphicEncryption 同态加密.md  C5 - DigitalSignature 数字签名.md  C6 - IdentityScheme 身份认证.md  C7-8 - AdvancedDigitalSigs 高级数字签名.md  C9 - ABE 属性基加密.md
(+163 files in other folders)
