[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-doc-rag"
version = "0.1.0"
description = "Multimodal document RAG project skeleton with backend API and frontend demo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.2",
  "pydantic==2.11.4",
  "pydantic-settings==2.9.1",
  "httpx==0.28.1",
  "python-dotenv==1.1.0",
  "python-multipart==0.0.20",
  "streamlit==1.45.1",
  "requests==2.32.3",
  "PyYAML==6.0.2",
  "datasets==2.21.0",
  "numpy==2.1.1",
  "Pillow==11.2.1",
  "reportlab==4.2.2",
  "pypdfium2==4.30.0",
  "openai==2.38.0",
  "modelscope==1.37.1",
  "mineru[core]==3.2.2",
]

[project.scripts]
mmrag = "src.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
